--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
-        context: appointment
+        context: appointmentservice
         file: appointmentservice/Dockerfile
         push: true
         tags: |
