--- a/connection.yaml
+++ b/connection.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/jeniel/hospi.git
+    repoURL: https://github.com/jeniel/hospital.git
     targetRevision: HEAD
     path: .
   destination:
