--- a/connection.yaml
+++ b/connection.yaml
@@ -7,9 +7,10 @@ spec:
   generators:
     - git:
         repoURL: https://github.com/jeniel/hospital.git
+        revision: main   # <--- dito
         directories:
           - path: appointmentservice
-          - path: hospi3
+          - path: hospi
   template:
     metadata:
       name: '{{path.basename}}'
@@ -18,7 +19,7 @@ spec:
       source:
         repoURL: https://github.com/jeniel/hospital.git
         path: '{{path}}'
-        targetRevision: HEAD
+        targetRevision: main
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'
@@ -26,3 +27,4 @@ spec:
         automated:
           prune: true
           selfHeal: true
+
