--- a/appointmentservice/templates/service.yaml
+++ b/appointmentservice/templates/service.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "appointmentservice.fullname" . }}
-  labels:
-    {{- include "appointmentservice.labels" . | nindent 4 }}
+  name: {{ .Values.appName }}-service
+  namespace: {{ .Values.namespace}}
 spec:
+  selector:
+    app: {{ .Values.appName }}
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
-  selector:
-    {{- include "appointmentservice.selectorLabels" . | nindent 4 }}
+    - protocol: TCP
+      port: {{ .Values.service.port }}          # port sulod sa cluster
+      targetPort: {{ .Values.service.targetPort }}     # connect tp container
+      #nodePort: 30080 
