--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
-name: Node.js CI and Docker
 
+name: Java CI with Maven
+permissions:
+  contents: write  # ✅ Allow push to repo
 on:
   push:
     branches: [ "main" ]
@@ -8,27 +10,19 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
       with:
-        node-version: '20'
-
-    - name: Cache Node.js modules
-      uses: actions/cache@v3
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-
-    - name: Install dependencies
-      working-directory: appointmentservice
-      run: npm install
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package -DskipTests --file pom.xml
 
 
     - name: Log in to DockerHub
@@ -37,15 +31,12 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker image
+    - name: Build and push image
       uses: docker/build-push-action@v4
       with:
-        context: appointmentservice
-        file: appointmentservice/Dockerfile
+        context: .
         push: true
-        tags: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/hospital:latest
-          ${{ secrets.DOCKERHUB_USERNAME }}/hospital:${{ github.sha }}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/mavenspring:${{ github.sha }}
 
     - name: Install yq
       run: sudo wget -qO /usr/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 && sudo chmod +x /usr/bin/yq
