--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,29 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package -DskipTests --file pom.xml
+        cache: npm
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+      # 2️⃣ Setup Node.js
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+         node-version: '18'   # or your preferred Node.js version
+         cache: 'npm'
+
+      # 3️⃣ Install dependencies
+    - name: Install dependencies
+      run: npm install
+
+      # 4️⃣ Run tests (if any)
+    - name: Run tests
+      run: npm test
+
+      # 5️⃣ Start the app (optional)
+    - name: Start App
+      run: npm start
+
 
 
     - name: Log in to DockerHub
